<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vlib_description</name>
  <version>1.0.0</version>
  <description>vlib description package</description>
  <maintainer email="Teeramethr_pro@vistec.ac.th">BRAIN Lab Industrial Team</maintainer>
  <license>Apache License 2.0</license>
  
  <url type="website">https://brain.vistec.ac.th/</url>
  <url type="bugtracker">https://github.com/orgs/VISTEC-IST-ROBOTICS</url>

  <author email="Teeramethr_pro@vistec.ac.th">BRAIN Lab Industrial Team</author>
 
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>vlib_msgs</depend>
  
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
